small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
         <title> hello coresera </title>
     </head>
     <body>
-        <h1>hello coresera </h1>
+        <h1>hello coresera! its a great course </h1>
     </body>
 </html>
